fea:支持追加扫描指定包